# ROS-task

./: .gitignore  README.md
devel/: .catkin  setup.sh
devel/lib/pkgconfig/: week2_ros_practice.pc
devel/share/week2_ros_practice/cmake/: week2_ros_practiceConfig.cmake
src/wanghan_week2_ros_practice/: .gitignore  CMakeLists.txt  README.md  package.xml
src/wanghan_week2_ros_practice/launch/: week2_target.launch
src/wanghan_week2_ros_practice/scripts/: target_sub.py
